# httm

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  httm.1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflow/: cargo-build.yml
.github/workflows/: cargo-deb-build.yml  cargo-deb.yml  package-build.yml  rust.yml
cargo_about/: about.hbs  about.toml
packaging/: PKGBUILD  install-from-source.bash
packaging/arch/: PKGBUILD
packaging/arch/example/: PKGBUILD
packaging/debian/: cargo-checksum.json  changelog  control  copyright  rules  watch
scripts/: alias-to-your-editor.zsh  bowie.bash  equine.bash  httm-key-bindings.zsh  nicotine.bash  ounce.bash  ounce.zsh  preview-bootstrap.bash  tm-mnt.bash  zdbstat.bash
scripts/old-examples/: httm_remote.sh
src/: config.rs  config_helper.rs  data.rs  deleted.rs  deleted_lookup.rs  display.rs  exec.rs  helper.rs  httm.rs  httm_restore.sh  init.rs  install_hot_keys.rs  interactive.rs  library.rs  lookup.rs  lookup_deleted.rs  lookup_file_mounts.rs  lookup_versions.rs  main.rs  parse.rs  parse_aliases.rs  parse_alts.rs  parse_mounts.rs  parse_snaps.rs  process_dirs.rs  recursive.rs  snapshot_ops.rs  utility.rs  versions_lookup.rs
src/background/: deleted.rs  recursive.rs
src/config/: generate.rs  helper.rs  init.rs  install_hot_keys.rs
src/data/: configure.rs  filesystem_info.rs  filesystem_map.rs  path_info.rs  paths.rs  precompute.rs  selection.rs  system_map.rs
src/display/: exec.rs  format.rs  maps.rs  num_versions.rs  primary.rs  special.rs  versions.rs  wrapper.rs
src/display_map/: format.rs  helper.rs  wrapper.rs
src/display_other/: exec.rs  generic_maps.rs  num_versions.rs  wrapper.rs
src/display_versions/: exec.rs  format.rs  num_versions.rs  wrapper.rs
src/exec/: deleted.rs  display.rs  display_main.rs  display_special.rs  file_defrag.rs  frag_ratio.rs  group_rollback.rs  interactive.rs  preview.rs  prune.rs  purge.rs  recursive.rs  roll_forward.rs  snap_guard.rs  snap_mounts.rs  snapshot.rs  snapshot_ops.rs  spawn_deleted.rs  wipe.rs
src/filesystem/: aliases.rs  alts.rs  collection.rs  mounts.rs  snaps.rs
src/init/: args.rs  install_hot_keys.rs
src/interactive/: browse.rs  exec.rs  preheat_cache.rs  preview.rs  prune.rs  restore.rs  select.rs  view_mode.rs
src/lookup/: common.rs  deleted.rs  file_mounts.rs  last_in_time.rs  prune.rs  snap_names.rs  versions.rs  wipe.rs
src/parse/: aliases.rs  alts.rs  mounts.rs  snaps.rs
src/roll_forward/: diff_events.rs  exec.rs  preserve_hard_links.rs
src/search/: deleted.rs  recursive.rs
src/zfs/: run_command.rs  snap_guard.rs  snap_mounts.rs
