[package]
name = "httm"
version = "0.18.0"
edition = "2021"
keywords = ["zfs", "backup", "restore", "cli-utility", "snapshot"]
description = "A CLI tool for viewing snapshot file versions on ZFS and btrfs datasets"
repository = "https://github.com/kimono-koans/httm"
readme = "README.md"
categories = [ "command-line-utilities",  "os" ]
license = "MPL-2.0"
documentation = "https://github.com/kimono-koans/httm/blob/master/README.md"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
strip = true
opt-level = "z"  # Aggressively optimize for size.

[dependencies]
clap = { version = "3.2.8", features = ["cargo"] }
crossbeam = { version = "0.8.2", default-features = false }
time = { version = "0.3.17", features = ["formatting", "local-offset"] }
number_prefix = { version = "0.4.0",  default-features = false }
skim = { version = "0.10.2", default-features = false }
lscolors = { version = "0.13.0", features = ["ansi_term"] }
terminal_size = { version = "0.2.3", default-features = false }
which = { version = "4.3.0", default-features = false }
rayon = { version = "1.6.0", default-features = false }
indicatif =  { version = "0.17.2", default-features = false }
proc-mounts = { version = "0.3.0", default-features = false }
once_cell = { version = "1.16.0", default-features = false }
chrono = { version = "0.4.23", default-features = false }
hashbrown = { version = "0.13.1" }
libc = { version = "0.2.138", default-features = false }

[patch.crates-io]
skim = { git = "https://github.com/kimono-koans/skim", branch = "httm-vendored" }

[package.metadata.deb]
maintainer = "kimono koans <https://github.com/kimono-koans/>"
copyright = "2022, Robert Swinford <robert.swinford<...at...>gmail.com>"
extended-description = """\

Prints the size, date and corresponding locations of available unique versions of files \
residing on snapshots.  May also be used interactively to select and restore from such \
versions, and even to snapshot datasets which contain certain files.
"""
license-file = ["LICENSE", "4"]
depends = "libc6" 
section = "utility"
priority = "optional"
assets = [
    ["target/release/httm", "usr/bin/", "755"],
    ["scripts/ounce.bash", "usr/bin/ounce", "755"],
    ["scripts/bowie.bash", "usr/bin/bowie", "755"],
    ["httm.1", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/httm/README", "644"],
]