[package]
name = "httm" 
authors = ["Robert Swinford <robert.swinford@gmail.com>"]
version = "0.26.7"
edition = "2021"
keywords = ["zfs", "backup", "restore", "cli-utility", "snapshot"]
description = "A CLI tool for viewing snapshot file versions on ZFS and btrfs datasets"
repository = "https://github.com/kimono-koans/httm"
readme = "README.md"
categories = [ "command-line-utilities",  "os" ]
license = "MPL-2.0"
documentation = "https://github.com/kimono-koans/httm/blob/master/README.md"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = true

# acls feature - requires libacl1-dev to build
[features]
acls = ["exacl"]

[target.'cfg(unix)'.dependencies]
exacl = { version = "0.10.0", optional=true }

[dependencies]
simd-adler32 = { version = "0.3.5", default-features = false, features = ["std"] }
clap = { version = "3.2.25", features = ["cargo"] }
crossbeam-channel = { version = "0.5.8", default-features = false }
time = { version = "0.3.21", features = ["formatting", "local-offset"] }
number_prefix = { version = "0.4.0",  default-features = false }
skim = { version = "0.10.14", package="two_percent" }
nu-ansi-term = { version = "0.47.0", default-features = false }
lscolors = { version = "0.14.0", default-features = false, features = ["nu-ansi-term"] }
terminal_size = { version = "0.2.6", default-features = false }
which = { version = "4.4.0", default-features = false }
rayon = { version = "1.7.0", default-features = false }
indicatif =  { version = "0.17.3", default-features = false }
proc-mounts = { version = "0.3.0", default-features = false }
once_cell = { version = "1.17.1", default-features = false }
hashbrown = { version = "0.13.2", features = ["rayon"] }
nix = { version = "0.26.2", features = ["fs"] }
xattr = { version = "1.0.0", default-features = false }
serde = { version = "1.0.163", default-features = false }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
filetime = { version = "0.2.21", default-features = false }
libc = { version = "0.2.144", default-features = false }

[patch.crates-io]
timer = { git = "https://github.com/kimono-koans/timer.rs" }

[package.metadata.deb]
maintainer = "kimono koans <https://github.com/kimono-koans/>"
copyright = "2023, Robert Swinford <robert.swinford<...at...>gmail.com>"
extended-description = """\

Prints the size, date and corresponding locations of available unique versions of files \
residing on snapshots.  May also be used interactively to select and restore from such \
versions, and even to snapshot datasets which contain certain files.
"""
license-file = ["LICENSE", "4"]
depends = "libc6" 
section = "utility"
priority = "optional"
assets = [
    ["target/release/httm", "usr/bin/", "755"],
    ["scripts/ounce.bash", "usr/bin/ounce", "755"],
    ["scripts/bowie.bash", "usr/bin/bowie", "755"],
    ["scripts/nicotine.bash", "usr/bin/nicotine", "755"],
    ["httm.1", "usr/share/man/man1/httm.1", "644"],
    ["README.md", "usr/share/doc/httm/README.md", "644"],
    ["LICENSE", "usr/share/doc/httm/LICENSE", "644"],
    ["third_party/LICENSES_THIRD_PARTY.html", "usr/share/doc/httm/LICENSES_THIRD_PARTY.html", "644"],
]