[package]
name = "httm"
authors = ["Robert Swinford <robert.swinford <...at...> gmail.com>"]
version = "0.47.1"
edition = "2024"
keywords = ["zfs", "backup", "restore", "cli-utility", "snapshot"]
description = "A CLI tool for viewing snapshot file versions on ZFS and btrfs datasets"
repository = "https://github.com/kimono-koans/httm"
readme = "README.md"
categories = ["command-line-utilities", "os"]
license = "MPL-2.0"
documentation = "https://github.com/kimono-koans/httm/blob/master/README.md"

[badges]
maintenance = { status = "actively-developed" }

[profile.deb]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
inherits = "release"

[features]
default = ["std"]
std = ["xattrs", "malloc_trim"]
# acls feature - requires libacl1-dev to build
acls = ["exacl"]
xattrs = ["xattr"]
malloc_trim = ["skim/malloc_trim", "libc"]
licensing = ["lms", "itertools"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.172", default-features = false, optional = true }
exacl = { version = "0.12.0", default-features = false, optional = true }
xattr = { version = "1.5.0", default-features = false, optional = true }

[dependencies]
foldhash = { version = "0.1.5", default-features = false }
clap = { version = "4.5.38", default-features = true, features = ["cargo"] }
crossbeam-channel = { version = "0.5.15", default-features = false }
time = { version = "0.3.41", default-features = false, features = [
    "formatting",
    "local-offset",
] }
unit-prefix = { version = "0.5.1", default-features = false }
skim = { version = "0.12.14", default-features = false, package = "two_percent" }
nu-ansi-term = { version = "0.50.1", default-features = false }
lscolors = { version = "0.20.0", default-features = false, features = [
    "nu-ansi-term",
] }
terminal_size = { version = "0.4.2", default-features = false }
which = { version = "7.0.3", default-features = false }
rayon = { version = "1.10.0", default-features = false }
indicatif = { version = "0.17.11", default-features = false }
proc-mounts = { version = "0.3.0", default-features = false }
hashbrown = { version = "0.15.3", default-features = false, features = [
    "rayon",
    "inline-more",
    "default-hasher",
] }
nix = { version = "0.30.1", default-features = false, features = [
    "user",
    "zerocopy",
] }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
    "preserve_order",
] }
realpath-ext = { version = "0.1.3", default-features = false, features = [
    "std",
] }
# these are strictly not required to build, only included for attribution sake (to be picked up by cargo_about)
lms = { version = "0.4.0", default-features = false, optional = true }
itertools = { version = "0.14.0", default-features = false, optional = true }

[patch.crates-io]
indicatif = { git = "https://github.com/console-rs/indicatif" }

[package.metadata.deb]
maintainer = "kimono koans <https://github.com/kimono-koans/>"
copyright = "2024, Robert Swinford <robert.swinford<...at...>gmail.com>"
extended-description = """\

Prints the size, date and corresponding locations of available unique versions of files \
residing on snapshots.  May also be used interactively to select and restore from such \
versions, and even to snapshot datasets which contain certain files.
"""
license-file = ["LICENSE", "4"]
depends = ["libc6"]
section = "utility"
priority = "optional"
features = ["xattrs", "malloc_trim"]
assets = [
    [
        "target/release/httm",
        "usr/bin/",
        "755",
    ],
    [
        "scripts/ounce.bash",
        "usr/bin/ounce",
        "755",
    ],
    [
        "scripts/bowie.bash",
        "usr/bin/bowie",
        "755",
    ],
    [
        "scripts/nicotine.bash",
        "usr/bin/nicotine",
        "755",
    ],
    [
        "scripts/equine.bash",
        "usr/bin/equine",
        "755",
    ],
    [
        "httm.1",
        "usr/share/man/man1/httm.1",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/httm/README.md",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/httm/LICENSE",
        "644",
    ],
    [
        "third_party/LICENSES_THIRD_PARTY.html",
        "usr/share/doc/httm/LICENSES_THIRD_PARTY.html",
        "644",
    ],
]
